# rstd-plus-plus

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  meson.build  meson_options.txt
examples/: CMakeLists.txt  meson.build  result_example.cpp
include/: meson.build
include/rstd/: result.hpp
include/rstd++/: core.hpp  result.hpp
tests/: meson.build
tests/rstd++/: result_test.cpp
